--- a/stylesheets/roster.css
+++ b/stylesheets/roster.css
@@ -107,7 +107,7 @@ p {
 }
 
 .roster-header {
-    font-family: 'Halcyon-header';
+    font-family: 'Oblivion-header';
     font-size: 36px;
     font-weight: 500;
     letter-spacing: 5px;
