--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -233,6 +233,13 @@
         transition: 0.2s
     }
     
+    img.icon:boosting {
+        width: 16px;
+        height: 16px;
+        opacity: 1.0;
+        vertical-align: top;
+    }
+
     img.icon:hover {
         opacity: 1.0;
         transform: scale(1.2);
