--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="media/icons/raiderio.png" alt="raiderio"></a>
         </li>
         <li>
-            <a href=https://www.warcraftlogs.com/guild/calendar/563170 target="_blank" rel="noopener noreferrer"><img class="icon" src="media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
+            <a href=https://www.warcraftlogs.com/guild/id/563170 target="_blank" rel="noopener noreferrer"><img class="icon" src="media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
     </ul>
     <p class="view"><a href="https://github.com/sheffywow/oblivion" target="_blank" rel="noopener noreferrer">View the Project on GitHub <small>kanding/oblivion</small></a></p>
     <ul class="button">
